# history2

./: bot_gui.py  bot_gui.spec  proxy.txt  pyproject.toml  tokens.json  user.csv
rust/: Cargo.toml  Makefile  telegram.session  tokens.json
rust/src/: Untitled-1.json  captcha_solver.rs  main.rs  main3.rs  proxy (1).txt  proxy.txt  telegram_manager.rs  user 2 - نسخة (2).csv  user للتجربه.csv  user.csv
src/: bot_gui.py  proxy.txt
