[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myproject"
version = "0.1.0"
description = "My awesome Python project"
authors = [{ name = "Your Name", email = "allachaib54@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "requests>=2.0",
]

[project.urls]
Homepage = "https://github.com/allachaib31/history2"

[project.scripts]
myproject = "myproject.main:main"
