[package]
name = "webbook-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.24"
egui = "0.24"
egui_extras = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
rfd = "0.12"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
anyhow = "1.0"
regex = "1.10"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
parking_lot = "0.12"
url = "2.5" 
futures = "0.3"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
sha1 = "0.10"
tokio-socks = "0.5"


[profile.release]
opt-level = 3
lto = true