[package]
name = "webbook-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }
eframe = "0.24"
egui = "0.24"
egui_extras = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
rfd = "0.12"
tokio = { version = "1.0", features = ["full","sync"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
anyhow = "1.0"
regex = "1.10"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
parking_lot = "0.12"
url = "2.5" 
futures = "0.3"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
sha1 = "0.10"
tokio-socks = "0.5"
telegram-bot = "0.7"
tokio-native-tls = "0.3"
base64 = "0.21"
webbrowser = "0.8"
grammers-client = "0.7.0"
grammers-session = "0.7.0"
grammers-tl-types = "0.7.0"

dialoguer = "0.10"


[profile.release]
opt-level = 3
lto = true